There are many places in the prims directory where THROW_0 (or THROW_MSG_0) is used, where the return type of the function is a pointer type. These should instead be using THROW_NULL (or THROW_MSG_NULL), both for clarity and to avoid -Wzero-as-null-pointer-constant warnings.
- blocks
-
JDK-8332189 Enable -Wzero-as-null-pointer-constant
- Open
- links to
-
Commit(master) openjdk/jdk/20575949
-
Review(master) openjdk/jdk/20456