8337782: Use THROW_NULL instead of THROW_0 in pointer contexts in prims code

Reviewed-by: shade, dholmes